--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "daib",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.18.0",
+    "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
     "play-dl": "^1.9.7",
     "ytdl-core": "^4.11.5"
