--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
     "play-dl": "^1.9.7",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "dotenv": "^16.4.5"
   }
 }
