--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "daib",
+  "name": "discord-bot",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.18.0",
-    "express": "^4.18.2",
-    "ffmpeg": "^0.0.4",
-    "play-dl": "^1.9.7",
-    "ytdl-core": "^4.11.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "node-fetch": "^2.7.0"
   }
 }
