--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=MTA5ODY0MTIxNTE3MzQ0NzgzMw.GY9zM3.P6CLVWkQKRyFew8KG_x5nt-iz5uWiHT7mun7rU
+DISCORD_TOKEN=MTA5ODY0MTIxNTE3MzQ0NzgzMw.GdRl0y.wpHa3NCdoFoXdTpD-lEgzaSbwqI7DyoJnN_H7I
 PORT=8080
 
